--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/img/Vinyl.ico">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./assets/img/Vinyl.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>cv</title>
 </head>
